实现基本的student功能 可以正确显示了 修复了这个bug